--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </article>
 </body>
 <script>
-    fetch('data/directories.json').then(r=>console.log(r.json()))
+    fetch('data/categories.json').then(r=>console.log(r.json()))
 </script>
 </html>
