--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     </article>
 </body>
 <script>
-    fetch('data/categories.json').then(r=>console.log(r.json()))
+    fetch('data/categories.json')
+        .then(r=>r.json())
+        .then(cats=>{
+            cats.forEach(doc=>{
+                var el = document.createElement('ul');
+                const time = new Date(doc.Date);
+                var categories = doc.Category.map(v=>`<span class="category-item"> ${v} </span>`);
+                el.innerHTML = `<a class="directory-item" href="${time.getFullYear()}-${time.getMonth()+1}/${doc.Title}">${doc.Title}</a>${categories}`
+                document.querySelector('aside').appendChild(el);
+            })
+        })
 </script>
 </html>
